--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/Vg7Lb3k/Whats-App-Image-2023-12-14-at-2-41-54-PM-removebg.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Irfan Portfolio</title>
 </head>
 
 <body>
